--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     // take time to execute.
     ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
       if (message === 'slow message') {
-        setTimeout(() => callback(message), 4000);
+        setTimeout(() => callback('slow response'), 4000);
       } else {
-        callback('fast response');
+        callback(message);
       }
     });
   </script>
