--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   </head>
   <script type="text/javascript">
     
-    // when we get a message from the app that needs a return value
-    // return the string 'fast response' unless the message is
-    // 'slow message'. If the message is 'slow message', wait for
-    // four seconds, then return the string 'slow response'.
+    // when we get user coordinates from the app which requires a return value
+    // return the user's coordinates exactly as recieved.
+    // If the message is 'test', wait for
+    // four seconds, then return the string 'loud and clear!'.
     // The slow response shows how this could work for API calls that
-    // take time to execute.
+    // take time to execute, while the test message is designed for debugging.
     ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
-      if (message === 'slow message') {
-        setTimeout(() => callback('slow response'), 4000);
+      if (message === 'test') {
+        setTimeout(() => callback('loud and clear!'), 4000);
       } else {
         callback(message);
       }
